tests/snapshots/examples_fixtures/guide_type_system__11_match_non_exhaustive_fail.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/11_match_non_exhaustive_fail.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/guide_type_system/11_match_non_exhaustive_fail.flx:5:1
  |
5 | match b {
  | ^^^^^^^^^
6 |     true -> 1
  | ^^^^^^^^^^^^^
7 | };
  | ^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
